# Agentic-AI-Job-Preference-Assistant

./: README.md  pyproject.toml
src/class02/: __init__.py  main.py
